# cpp20-cmake-emscripten-docker-starter-template

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README_ZH.md  build.sh  docker-compose.yaml  index.html
cmake/: TargetProperties.cmake
cmake/EmscriptenScanDepsFix/: emscan-deps.py
src/: CMakeLists.txt  main.cpp
